# ibleatools

./: .gitignore  README.md  config.yaml  config_template.yaml  lf_destriped.npy  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ephysatlas/: feature_computation.py  features.py  logger_config.py  plots.py  region_inference.py
examples/: basic_feature_extraction_using_pid.py  compute_features_cbin.py  compute_features_raw_NP1.py  get_model_features.py  pid__compute_features_run_inference.py  train_region_predictor_gradient_boosting.py  training.py
src/: feature_computation.py  features.py  logger_config.py  plots.py  region_inference.py
src/ephysatlas/: __init__.py  anatomy.py  data.py  decoding.py  feature_computation.py  features.py  outliers.py  plots.py  region_inference.py  regionclassifier.py  reveal.py  utils.py
src/ephysatlas/fixtures/: __init__.py  benchmark_pids.py  misaligned_pids.py  nemo_test_pids.py  repro_ephys_pids.py  uncertain_alignment.py
src/ibleatools/: __init__.py  decoding.py  feature_computation.py  features.py  logger_config.py  region_inference.py
tests/: test_anatomy.py  test_feature_computation.py  test_features.py  test_main.py  test_pid_fixtures.py  test_region_classifier.py  test_utils.py
