[project]
name = "ibleatools"
description = "Tools for IBL data analysis and processing"
authors = [
    {name = "International Brain Laboratory", email = "software-devs@internationalbrainlab.org"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Neuroscience :: Data analysis",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dependencies]
file = "requirements.txt"

[tool.pdm.version]
source = "file"
path = 'src/ephysatlas/__init__.py'

[tool.pdm.package-dir]
ibleatools = "src/ephysatlas"

[tool.pdm.packages]
include = ["src/ephysatlas"]

[dependency-groups]
lint = ["ruff>=0.7.3"]
